Update answer in ex. 4 with small refinements

--- a/exercise_instructions_week_34.ipynb
+++ b/exercise_instructions_week_34.ipynb
@@ -266,12 +266,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09660f10",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "248d8931",
    "metadata": {},
    "source": [
@@ -399,10 +393,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e7536e",
+   "id": "c320c459",
    "metadata": {},
    "source": [
-    "We do not fit the model to X_test because the x values in X_test will be the input we use when testing the model against the corresponding test values for y, to see if the model has picked up on the relationship between x and y of the original dataset we split into training and test data."
+    "We do not fit the model to X_test (and y_test) because these x values are used as input when we test if the model is any good at predicting y test. This is so to see if the model has picked up on the relationship between x and y in the original dataset that we split into training and test data."
    ]
   }
  ],
@@ -422,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
