--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -111,6 +111,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94822c49",
+   "metadata": {},
+   "source": [
+    "**Answer:** Since $\\boldsymbol{a}$ and $\\boldsymbol{x}$ are column-vectors with length $\\boldsymbol{n}$, they both have the shape $(n \\times 1)$. This means that $\\boldsymbol{a}^T$ would be of shape $(n \\times 1)^T \\rightarrow (1 \\times n)$. Therefore $\\boldsymbol{a}^T \\boldsymbol{x}$ have the shape $(1 \\times n) (n \\times 1) \\rightarrow (1 \\times 1)$, which is a scalar.\n",
+    "\n",
+    "We are differentiating with respect to $\\boldsymbol{x}$, with shape ($n \\times 1$).\n",
+    "\n",
+    "Since $\\boldsymbol{a}^T$ doesn't depend on $\\boldsymbol{x}$, \n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T,\n",
+    "$$\n",
+    "\n",
+    "so the result of the expression has shape $(n \\times 1)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0396734",
    "metadata": {},
    "source": [
@@ -119,6 +137,14 @@
     "$$\n",
     "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T,\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77a9bb4",
+   "metadata": {},
+   "source": [
+    "**Answer**:"
    ]
   },
   {
@@ -517,7 +543,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -531,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
