Add some text to the answer of Ex.1 b)

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "We are differentiating with respect to $\\boldsymbol{x}$, with shape ($n \\times 1$).\n",
     "\n",
-    "Since $\\boldsymbol{a}^T$ doesn't depend on $\\boldsymbol{x}$, \n",
+    "Since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, \n",
     "\n",
     "$$\n",
     "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T,\n",
@@ -144,7 +144,7 @@
    "id": "a77a9bb4",
    "metadata": {},
    "source": [
-    "**Answer**:"
+    "**Answer**: From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ..."
    ]
   },
   {
