Add solution to rest of Ex. 1

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -114,17 +114,13 @@
    "id": "94822c49",
    "metadata": {},
    "source": [
-    "**Answer:** Since $\\boldsymbol{a}$ and $\\boldsymbol{x}$ are column-vectors with length $\\boldsymbol{n}$, they both have the shape $(n \\times 1)$. This means that $\\boldsymbol{a}^T$ would be of shape $(n \\times 1)^T \\rightarrow (1 \\times n)$. Therefore $\\boldsymbol{a}^T \\boldsymbol{x}$ have the shape $(1 \\times n) (n \\times 1) \\rightarrow (1 \\times 1)$, which is a scalar.\n",
+    "<u>**Answer:**</u> Since $\\boldsymbol{a}$ and $\\boldsymbol{x}$ are column-vectors with length $\\boldsymbol{n}$, they both have the shape $(n \\times 1)$. This means that $\\boldsymbol{a}^T$ would be of shape $(n \\times 1)^T \\rightarrow (1 \\times n)$, a row vector. Therefore $\\boldsymbol{a}^T \\boldsymbol{x}$ have the shape $(1 \\times n) (n \\times 1) \\rightarrow (1 \\times 1)$, thus being a scalar.\n",
     "\n",
-    "We are differentiating with respect to $\\boldsymbol{x}$, with shape ($n \\times 1$).\n",
+    "We are differentiating with respect to $\\boldsymbol{x}$, which has shape ($n \\times 1$).\n",
     "\n",
-    "Since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, \n",
+    "Since differentiating a scaler with respect to av column vector, the differentiation operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ will take the same shape as the variable of differentiation $\\boldsymbol{x}$, namely ($n \\times 1$). The Jacobian matrix: $\\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) = \\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$, then gets the shape $(n \\times 1)(1 \\times 1) \\rightarrow (n \\times 1)$, which is also the shape of the final expression.\n",
     "\n",
-    "$$\n",
-    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T,\n",
-    "$$\n",
-    "\n",
-    "so the result of the expression has shape $(n \\times 1)$."
+    "~~It does NOT work to just say that since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, $\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T$, so the result of the expression has shape $(1 \\times n)$ just like $\\boldsymbol{a}^T$.~~"
    ]
   },
   {
@@ -144,7 +140,7 @@
    "id": "a77a9bb4",
    "metadata": {},
    "source": [
-    "**Answer**: From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ..."
+    "<u>**Answer**</u>: From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ..."
    ]
   },
   {
