Add text and latex math to Ex. 1

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "We are differentiating with respect to $\\boldsymbol{x}$, which has shape ($n \\times 1$).\n",
     "\n",
-    "Since differentiating a scaler with respect to av column vector, the differentiation operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ will take the same shape as the variable of differentiation $\\boldsymbol{x}$, namely ($n \\times 1$). The Jacobian matrix: $\\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) = \\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$, then gets the shape $(n \\times 1)(1 \\times 1) \\rightarrow (n \\times 1)$, which is also the shape of the final expression.\n",
+    "~~Since differentiating a scaler with respect to av column vector, the differentiation operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ will take the same shape as the variable of differentiation $\\boldsymbol{x}$, namely ($n \\times 1$).~~ The Jacobian matrix: $\\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) = \\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$, then gets the shape $(n \\times 1)(1 \\times 1) \\rightarrow (n \\times 1)$, which is also the shape of the final expression.\n",
     "\n",
     "~~It does NOT work to just say that since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, $\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T$, so the result of the expression has shape $(1 \\times n)$ just like $\\boldsymbol{a}^T$.~~"
    ]
@@ -140,7 +140,41 @@
    "id": "a77a9bb4",
    "metadata": {},
    "source": [
-    "<u>**Answer**</u>: From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ..."
+    "<u>**Answer**</u>: First: \n",
+    "\n",
+    "$$\n",
+    "\\boldsymbol{a}^T \\boldsymbol{x} = \\left( \\begin{array}{cccc} a_0, & a_1, & \\cdots, & a_{n-1} \\end{array} \\right) \\left( \\begin{array}{c} x_0 \\\\ x_1 \\\\ \\vdots \\\\ x_{n-1} \\end{array} \\right) = \\left( \\begin{array}{cccc} a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\end{array} \\right)\n",
+    "$$\n",
+    "\n",
+    "The differentiation operator, in the context of producing the Jacobian matrix, differentiating with respect to $\\boldsymbol{x}$ shape $(n \\times 1)$:\n",
+    "\n",
+    "$$\n",
+    "\\dfrac{\\partial}{\\partial \\boldsymbol{x}} = \\left( \\begin{array}{cccc} \\cfrac{\\partial}{\\partial x_0}, & \\cfrac{\\partial}{\\partial x_1}, & \\dots, & \\cfrac{\\partial}{\\partial x_{n-1}} \\end{array} \\right)\n",
+    "$$\n",
+    "\n",
+    "This operator could have been a column vector with the shape of $x$, then it would have been called the **gradient**. The Jacobian matrix is defined to explicitly have the elements of the variable of differentiation listed horizontally. This might cause a bit of confusion since $(1 \\times n)(1 \\times 1)$ seems illegal.\n",
+    "\n",
+    "So:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} &= \\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) \\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "&= \\left( \\begin{array}{c} \\cfrac{\\partial}{\\partial x_0} \\\\ \\cfrac{\\partial}{\\partial x_1} \\\\ \\vdots \\\\ \\cfrac{\\partial}{\\partial x_{n-1}} \\end{array} \\right) \\left( \\begin{array}{cccc} a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\end{array} \\right) \\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "&= \\left( \\begin{array}{c} \\cfrac{\\partial}{\\partial x_0} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\\\ \\cfrac{\\partial}{\\partial x_1} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\\\ \\vdots \\\\ \\cfrac{\\partial}{\\partial x_{n-1}} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\end{array} \\right) \\\\\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "&= \\left( \\begin{array}{c} a_0 \\\\ a_1 \\\\ \\vdots \\\\ a_{n-1} \\end{array} \\right) = \\boldsymbol{a}\n",
+    "\\end{align*}\n",
+    "\n",
+    "From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ...\n",
+    "\n",
+    "## HOW TO DETERMINE SHAPE OF OPERATOR####"
    ]
   },
   {
