Add code to Ex. 3

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -217,6 +217,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dacbbce",
+   "metadata": {},
+   "source": [
+    "<u>**Answer**</u>: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7cccc9d",
    "metadata": {},
    "source": [
@@ -320,15 +328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "5ad87a65",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.zeros((n, 3))\n",
-    "#X[:, 0] = ...\n",
-    "#X[:, 1] = ...\n",
-    "#X[:, 2] = ..."
+    "X[:, 0] = np.ones(n)\n",
+    "X[:, 1] = income\n",
+    "X[:, 2] = children\n",
+    "\n",
+    "y = spending\n",
+    "\n",
+    "X_inv = np.linalg.pinv(X)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b1bb81c",
+   "metadata": {},
+   "source": [
+    "This create a feature matrix with $\\boldsymbol{X}$ with first column having ones, second the income, and third the number of children.  "
    ]
   },
   {
@@ -341,13 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8f3f68aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "def OLS_parameters(X, y):\n",
-    "    return ...\n",
+    "    \"\"\"\n",
+    "    Take an invertible feature matrix X, and a column vector y\n",
+    "\n",
+    "    Return the parameters of OLS fit.\n",
+    "    \"\"\"\n",
+    "    X_inv = np.linalg.pinv(X) # The inverse of matrix X, using .pinv incase X is not square\n",
+    "    beta = X_inv @ y\n",
+    "    return beta\n",
     "\n",
     "#beta = OLS_parameters(X, y)"
    ]
