Add code to Ex. 4

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -275,6 +275,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c272ca2a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial \\left(\\boldsymbol{x}-\\boldsymbol{A}\\boldsymbol{s}\\right)^T\\left(\\boldsymbol{x}-\\boldsymbol{A}\\boldsymbol{s}\\right)}{\\partial \\boldsymbol{s}} = -2\\left(\\boldsymbol{y}-\\boldsymbol{X}\\boldsymbol{\\theta}\\right)^T\\boldsymbol{X},\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57ca3d74",
    "metadata": {},
    "source": [
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "id": "e5ff2a69",
    "metadata": {},
    "outputs": [],
@@ -307,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "id": "a3cf2792",
    "metadata": {},
    "outputs": [],
@@ -328,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "id": "5ad87a65",
    "metadata": {},
    "outputs": [],
@@ -338,9 +348,7 @@
     "X[:, 1] = income\n",
     "X[:, 2] = children\n",
     "\n",
-    "y = spending\n",
-    "\n",
-    "X_inv = np.linalg.pinv(X)\n"
+    "y = spending"
    ]
   },
   {
@@ -356,15 +364,23 @@
    "id": "e0ddfac2",
    "metadata": {},
    "source": [
-    "**b)** Use the expression from **3d)** to find the optimal parameters $\\boldsymbol{\\hat{\\beta}_{OLS}}$ for predicting spending based on these features. Create a function for this operation, as you are going to need to use it a lot."
+    "**b)** Use the expression from **2d)** to find the optimal parameters $\\boldsymbol{\\hat{\\beta}_{OLS}}$ for predicting spending based on these features. Create a function for this operation, as you are going to need to use it a lot."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "8f3f68aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The beta vector: [ 9.12808583  0.5119025  14.60743095]\n"
+     ]
+    }
+   ],
    "source": [
     "def OLS_parameters(X, y):\n",
     "    \"\"\"\n",
@@ -372,11 +388,12 @@
     "\n",
     "    Return the parameters of OLS fit.\n",
     "    \"\"\"\n",
-    "    X_inv = np.linalg.pinv(X) # The inverse of matrix X, using .pinv incase X is not square\n",
-    "    beta = X_inv @ y\n",
+    "    X_inv = np.linalg.pinv(X) # The inverse of matrix X, using .pinv in case X is not square\n",
+    "    beta = X_inv @ y    # The beta vector in: X @ beta = y, solved for beta\n",
     "    return beta\n",
     "\n",
-    "#beta = OLS_parameters(X, y)"
+    "beta = OLS_parameters(X, y)\n",
+    "print(\"The beta vector:\", beta)"
    ]
   },
   {
@@ -399,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "id": "d7476c84",
    "metadata": {},
    "outputs": [],
@@ -419,20 +436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "id": "91496e40",
    "metadata": {},
    "outputs": [],
    "source": [
     "def polynomial_features(x, p):\n",
+    "    \"\"\"\n",
+    "    Take an array of x values, and the desired polynomial degree p.\n",
+    "\n",
+    "    Create a feature (design) matrix with ones in the first column, and the subsequently columns containing \n",
+    "    x with the elements raised to the power of the corresponding column number, degree x^1 to x^p.\n",
+    "    \"\"\"\n",
     "    n = len(x)\n",
     "    X = np.zeros((n, p + 1))\n",
-    "    #X[:, 0] = ...\n",
-    "    #X[:, 1] = ...\n",
-    "    #X[:, 2] = ...\n",
-    "    # could this be a loop?\n",
+    "    X[:, 0] = np.ones(n)    # Create first column with only ones, the intercept\n",
+    "    for i in range(1, p+1):\n",
+    "        X[:, i] = x**i\n",
+    "    \n",
+    "    return X\n",
     "\n",
-    "#X = polynomial_features(x, 5)"
+    "X = polynomial_features(x, 5)"
    ]
   },
   {
@@ -440,17 +464,26 @@
    "id": "b84b1e31",
    "metadata": {},
    "source": [
-    "**b)** Use the expression from **3d)** to find the optimal parameters $\\boldsymbol{\\hat{\\beta}_{OLS}}$ for predicting $\\boldsymbol{y}$ based on these features. If you have done everything right so far, this code will not need changing."
+    "**b)** Use the expression from **2d)** to find the optimal parameters $\\boldsymbol{\\hat{\\beta}_{OLS}}$ for predicting $\\boldsymbol{y}$ based on these features. If you have done everything right so far, this code will not need changing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "id": "034f502c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.75596109  0.27464654 -0.02326439  0.05342623 -0.0034652  -0.0087781 ]\n"
+     ]
+    }
+   ],
    "source": [
-    "#beta = OLS_parameters(X, y)"
+    "beta = OLS_parameters(X, y)\n",
+    "print(beta)"
    ]
   },
   {
@@ -463,14 +496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "id": "29171358",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "#X_train, X_test, y_train, y_test = ..."
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
@@ -483,23 +516,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1e346f4c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.75672279  0.256444   -0.0208576   0.05898023 -0.00394112 -0.009129  ]\n"
+     ]
     }
    ],
    "source": [
-    "..."
+    "beta_train = OLS_parameters(X_train, y_train)\n",
+    "print(beta_train)\n",
+    "\n",
+    "def model_func(beta):\n",
+    "    \"\"\"\n",
+    "    Creating the model by using the beta values. Automatically finding the degree of the polynomial.\n",
+    "    \"\"\"\n",
+    "    n = len(beta)\n",
+    "    \n"
    ]
   },
   {
