Add more code to Ex. 4

--- a/Week35/exercise_instructions_week_35.ipynb
+++ b/Week35/exercise_instructions_week_35.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "91496e40",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
     "    \"\"\"\n",
     "    n = len(x)\n",
     "    X = np.zeros((n, p + 1))\n",
-    "    X[:, 0] = np.ones(n)    # Create first column with only ones, the intercept\n",
+    "    X[:, 0] = np.ones(n)     # Create first column with only ones, the intercept\n",
     "    for i in range(1, p+1):\n",
     "        X[:, i] = x**i\n",
     "    \n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "1e346f4c",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.75672279  0.256444   -0.0208576   0.05898023 -0.00394112 -0.009129  ]\n"
+      "[ 0.75672279  0.256444   -0.0208576   0.05898023 -0.00394112 -0.009129  ]\n",
+      "[[ 0.75596109]\n",
+      " [ 0.27464654]\n",
+      " [-0.02326439]\n",
+      " [ 0.05342623]\n",
+      " [-0.0034652 ]\n",
+      " [-0.0087781 ]]\n",
+      "(6, 1)\n"
      ]
     }
    ],
@@ -532,12 +539,21 @@
     "beta_train = OLS_parameters(X_train, y_train)\n",
     "print(beta_train)\n",
     "\n",
-    "def model_func(beta):\n",
+    "def model_func(beta, x):\n",
     "    \"\"\"\n",
-    "    Creating the model by using the beta values. Automatically finding the degree of the polynomial.\n",
+    "    Creating a model function by using the beta values as parameters in a ploynomial of degree len(beta). \n",
+    "    Automatically finding the degree of the polynomial from len(beta).\n",
     "    \"\"\"\n",
     "    n = len(beta)\n",
-    "    \n"
+    "    f = zeros((1, n+1))\n",
+    "    #for i in range(n+1):\n",
+    "        #f[i] = \n",
+    "    \n",
+    "    return #beta0 + beta*x + beta*x\n",
+    "\n",
+    "beta = beta.reshape((-1, len(beta)))\n",
+    "print(beta)\n",
+    "print(np.shape(beta))"
    ]
   },
   {
