Update text Ex. 1

--- a/Week35/exercises_week35.ipynb
+++ b/Week35/exercises_week35.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "We are differentiating with respect to $\\boldsymbol{x}$, which has shape ($n \\times 1$).\n",
     "\n",
-    "$\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$ is called the Jacobian or the Jacobian matrix of the expression\n",
+    "$\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$ is called the **Jacobian** or the **Jacobian matrix** of the expression $\\boldsymbol{a}^T \\boldsymbol{x}$. \n",
     "\n",
     "~~Since differentiating a scaler with respect to av column vector, the differentiation operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ will take the same shape as the variable of differentiation $\\boldsymbol{x}$, namely ($n \\times 1$).~~ The Jacobian matrix: $\\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) = \\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$, then gets the shape $(n \\times 1)(1 \\times 1) \\rightarrow (n \\times 1)$, which is also the shape of the final expression.\n",
     "\n",
