Add most of solution to Ex. 1

--- a/Week35/exercises_week35.ipynb
+++ b/Week35/exercises_week35.ipynb
@@ -114,15 +114,13 @@
    "id": "94822c49",
    "metadata": {},
    "source": [
-    "<u>**Answer:**</u> Since $\\boldsymbol{a}$ and $\\boldsymbol{x}$ are column-vectors with length $\\boldsymbol{n}$, they both have the shape $(n \\times 1)$. This means that $\\boldsymbol{a}^T$ would be of shape $(n \\times 1)^T \\rightarrow (1 \\times n)$, in other words a row vector. Therefore $\\boldsymbol{a}^T \\boldsymbol{x}$ have the shape $(1 \\times n) (n \\times 1) \\rightarrow (1 \\times 1)$, thus being a scalar.\n",
+    "<u>**Answer:**</u> Since $\\boldsymbol{a}$ and $\\boldsymbol{x}$ are column-vectors with length $\\boldsymbol{n}$, they both have the shape $(n \\times 1)$, $n$ rows in $1$ column. This means that $\\boldsymbol{a}^T$, the transpose of $\\boldsymbol{a}$, would take on the shape $(n \\times 1)^T \\rightarrow (1 \\times n)$, in other words become a row vector. Therefore the matrix multiplication $\\boldsymbol{a}^T \\boldsymbol{x}$ leads to the shape $(1 \\times n) (n \\times 1) \\rightarrow (1 \\times 1)$. Thus the expression we are taking the derivative of, $\\boldsymbol{a}^T \\boldsymbol{x}$, is a scalar.\n",
     "\n",
     "We are differentiating with respect to $\\boldsymbol{x}$, which has shape ($n \\times 1$).\n",
     "\n",
-    "$\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$ is called the **Jacobian** or the **Jacobian matrix** of the expression $\\boldsymbol{a}^T \\boldsymbol{x}$. \n",
+    "$\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$ is called the **Jacobian** or the **Jacobian matrix** of the expression $\\boldsymbol{a}^T \\boldsymbol{x}$. The differential operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ leading to the matrix is explicitly defined to have its elements along the rows in the matrix, even tho $\\boldsymbol{x}$ is a ($n \\times 1$) coulmn vector. This could be confusing since the \"normal\" way of thinking about operators and matrix multiplication, is that the inner dimensions must agree: $(a \\times b)(b \\times c) \\rightarrow (a \\times c)$. So $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ being $(1 \\times n)$, would certainly not agree with $\\boldsymbol{a}^T\\boldsymbol{x}$ being $(1 \\times 1)$.\n",
     "\n",
-    "~~Since differentiating a scaler with respect to av column vector, the differentiation operator $\\dfrac{\\partial}{\\partial \\boldsymbol{x}}$ will take the same shape as the variable of differentiation $\\boldsymbol{x}$, namely ($n \\times 1$).~~ The Jacobian matrix: $\\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) = \\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}}$, then gets the shape $(n \\times 1)(1 \\times 1) \\rightarrow (n \\times 1)$, which is also the shape of the final expression.\n",
-    "\n",
-    "~~It does NOT work to just say that since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, $\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T$, so the result of the expression has shape $(1 \\times n)$ just like $\\boldsymbol{a}^T$.~~\n"
+    "Given the above, the **Jacobian matrix** of the expression $\\boldsymbol{a}^T \\boldsymbol{x}$ is a $(1 \\times n)$ matrix, i.e. a row vector. We could also have said that since the elements of $\\boldsymbol{a}^T$ are independent of $\\boldsymbol{x}$, using the product rule: $\\dfrac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} = \\boldsymbol{a}^T$, which we have shown have the shape $(1 \\times n)$.\n"
    ]
   },
   {
@@ -148,35 +146,28 @@
     "\\boldsymbol{a}^T \\boldsymbol{x} = \\left( \\begin{array}{cccc} a_0, & a_1, & \\cdots, & a_{n-1} \\end{array} \\right) \\left( \\begin{array}{c} x_0 \\\\ x_1 \\\\ \\vdots \\\\ x_{n-1} \\end{array} \\right) = \\left( \\begin{array}{cccc} a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\end{array} \\right)\n",
     "$$\n",
     "\n",
-    "The differentiation operator, in the context of producing the Jacobian matrix, differentiating with respect to $\\boldsymbol{x}$ shape $(n \\times 1)$:\n",
+    "The differentiation operator, in the context of producing the Jacobian matrix for $f$ - differentiating with respect to $\\boldsymbol{x}$ shape $(n \\times 1)$:\n",
     "\n",
     "$$\n",
-    "\\dfrac{\\partial}{\\partial \\boldsymbol{x}} = \\left( \\begin{array}{cccc} \\cfrac{\\partial}{\\partial x_0}, & \\cfrac{\\partial}{\\partial x_1}, & \\dots, & \\cfrac{\\partial}{\\partial x_{n-1}} \\end{array} \\right)\n",
+    "\\dfrac{\\partial f}{\\partial \\boldsymbol{x}} = \\left( \\begin{array}{cccc} \\cfrac{\\partial f}{\\partial x_0}, & \\cfrac{\\partial f}{\\partial x_1}, & \\dots, & \\cfrac{\\partial f}{\\partial x_{n-1}} \\end{array} \\right)\n",
     "$$\n",
-    "\n",
-    "This operator could have been a column vector with the shape of $x$, then it would have been called the **gradient**. The Jacobian matrix is defined to explicitly have the elements of the variable of differentiation listed horizontally. This might cause a bit of confusion since $(1 \\times n)(1 \\times 1)$ seems illegal.\n",
     "\n",
     "So:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} &= \\dfrac{\\partial}{\\partial \\boldsymbol{x}} (\\boldsymbol{a}^T\\boldsymbol{x}) \\\\\n",
+    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{x})}{\\partial \\boldsymbol{x}} &= \\left( \\begin{array}{cccc} \\cfrac{\\partial}{\\partial x_0} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right), & \\cfrac{\\partial}{\\partial x_1} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right), & \\dots, & \\cfrac{\\partial}{\\partial x_{n-1}} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\end{array} \\right) \\\\\n",
     "\n",
     "\\\\\n",
     "\n",
-    "&= \\left( \\begin{array}{c} \\cfrac{\\partial}{\\partial x_0} \\\\ \\cfrac{\\partial}{\\partial x_1} \\\\ \\vdots \\\\ \\cfrac{\\partial}{\\partial x_{n-1}} \\end{array} \\right) \\left( \\begin{array}{cccc} a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\end{array} \\right) \\\\\n",
+    "&= \\left( \\begin{array}{cccc} a_0, & a_1, & \\dots, & a_{n-1} \\end{array} \\right) \\\\\n",
     "\n",
     "\\\\\n",
     "\n",
-    "&= \\left( \\begin{array}{c} \\cfrac{\\partial}{\\partial x_0} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\\\ \\cfrac{\\partial}{\\partial x_1} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\\\ \\vdots \\\\ \\cfrac{\\partial}{\\partial x_{n-1}} \\left( a_0 x_0 + a_1 x_1 + \\cdots + a_{n-1} x_{n-1} \\right) \\end{array} \\right) \\\\\n",
-    "\n",
-    "\\\\\n",
-    "\n",
-    "&= \\left( \\begin{array}{c} a_0 \\\\ a_1 \\\\ \\vdots \\\\ a_{n-1} \\end{array} \\right) = \\boldsymbol{a}\n",
+    "&= \\boldsymbol{a}^T\n",
     "\\end{align*}\n",
     "\n",
-    "From the Jacobian matrix, $\\boldsymbol{J}=\\frac{\\partial \\boldsymbol{y}}{\\partial \\boldsymbol{x}}$, describing the partial derivatives of the various components of y with respect to x, we have ...\n",
     "\n",
-    "## HOW TO DETERMINE SHAPE OF OPERATOR####"
+    "Which we were to show.\n"
    ]
   },
   {
@@ -189,6 +180,22 @@
     "$$\n",
     "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{A}\\boldsymbol{a})}{\\partial \\boldsymbol{a}} = \\boldsymbol{a}^T(\\boldsymbol{A}+\\boldsymbol{A}^T),\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4deb1858",
+   "metadata": {},
+   "source": [
+    "<u>**Answer**</u>: First lets look at the expression $\\boldsymbol{a}^T\\boldsymbol{A}\\boldsymbol{a}$. Just writing there shape: $(1 \\times n)(n \\times n)(n \\times 1) \\rightarrow (1 \\times 1)$. So again we are dealing with the derivative of a scalar with respect to a vector, this time $\\boldsymbol{a}$. The big difference here is that both $\\boldsymbol{a}^T$ and $\\boldsymbol{a}$ depends on the elements in $\\boldsymbol{a}$, and the transpose not having an equvivalent form in the scalar case, preventing the use of the standard product rule. \n",
+    "\n",
+    "$$\n",
+    "\\boldsymbol{a}^T\\boldsymbol{A}\\boldsymbol{a} = \\left( \\begin{array}{cccc} a_0, & a_1, & \\dots, & a_{n-1} \\end{array} \\right)\n",
+    "$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial (\\boldsymbol{a}^T\\boldsymbol{A}\\boldsymbol{a})}{\\partial \\boldsymbol{a}} &=\n",
+    "\\end{align*}"
    ]
   },
   {
