Add code to Ex. 4 e)

--- a/Week35/exercises_week35.ipynb
+++ b/Week35/exercises_week35.ipynb
@@ -1048,7 +1048,8 @@
       " [ 1.00000000e+00  2.87878788e+00  8.28741965e+00  2.38577232e+01]\n",
       " [ 1.00000000e+00  2.93939394e+00  8.64003673e+00  2.53964716e+01]\n",
       " [ 1.00000000e+00  3.00000000e+00  9.00000000e+00  2.70000000e+01]]\n",
-      "(80, 6)\n"
+      "(80, 6)\n",
+      "[ 0.82378532 -0.1162068   0.10549834  0.02504954 -0.01406463 -0.00169106]\n"
      ]
     }
    ],
@@ -1060,6 +1061,7 @@
     "X_features_polys = {}\n",
     "X_features_polys_split = {}\n",
     "beta_polys_train = {}\n",
+    "predict_poly = {}\n",
     "\n",
     "\n",
     "for i in poly_degrees:\n",
@@ -1071,13 +1073,15 @@
     "    X_features_polys_split[f\"y{i}_train\"] = y_train\n",
     "    X_features_polys_split[f\"y{i}_test\"] = y_test\n",
     "\n",
-    "    beta_polys_train[f\"beta_poly{i}\"] = OLS_parameters(X_train, y_train)\n",
+    "    beta_polys_train[f\"beta_poly{i}\"] = OLS_parameters(X_features_polys_split[f\"X{i}_train\"], X_features_polys_split[f\"y{i}_train\"])\n",
     "\n",
+    "    predict_poly[f\"pred_train_y\"] = model_func()\n",
+    "    predict_poly[f\"pred_test_y\"] = \n",
     "\n",
     "\n",
     "print(X_features_polys[\"X3\"])  # Access the matrix for degree 3\n",
     "print(np.shape(X_features_polys_split[\"X3_train\"]))\n",
-    "\n",
+    "print(beta_polys_train[f\"beta_poly3\"])\n",
     "\n"
    ]
   },
