Add text to Ex. 1

--- a/Week36/exercises_week36.ipynb
+++ b/Week36/exercises_week36.ipynb
@@ -37,16 +37,70 @@
    "id": "ff6ebdb5",
    "metadata": {},
    "source": [
-    "**a)** How many degrees of freedom does an OLS model fit to the features $x, x^2, x^3$ and the intercept have?\n",
-    "\n",
-    "**b)** Why is it bad for a model to have too many degrees of freedom?\n",
-    "\n",
-    "**c)** Why is it bad for a model to have too few degrees of freedom?\n",
-    "\n",
-    "**d)** Read [chapter 3.4.1 of Hastie et al.'s book](https://link.springer.com/book/10.1007/978-0-387-84858-7). What is the expression for the effective degrees of freedom of the ridge regression fit?\n",
-    "\n",
-    "**e)** Why might we want to use Ridge regression instead of OLS?\n",
-    "\n",
+    "**a)** How many degrees of freedom does an OLS model fit to the features $x, x^2, x^3$ and the intercept have?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2db36965",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u> Here we will fit four parameters in total, one for each degree of $x$, and one for the intercept. Therefore we say the model will have four degrees of freedom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "622bec70",
+   "metadata": {},
+   "source": [
+    "**b)** Why is it bad for a model to have too many degrees of freedom?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534aa7c4",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u>: Using to many degrees of freedom we are running the risk of overfitting the model to the training data. Meaning instead of picking out the general trend in the dataset, the model might count in outliers and noise as meaningful. Consequently performing worse on unseen test data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0225b93",
+   "metadata": {},
+   "source": [
+    "**c)** Why is it bad for a model to have too few degrees of freedom?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4af4509",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u> Having too few degrees of freedom will have the opposite effect of the above. It will be too crude, not being able to to catch the nuances in the data, making it overly generalized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df54e9d",
+   "metadata": {},
+   "source": [
+    "**d)** Read [chapter 3.4.1 of Hastie et al.'s book](https://link.springer.com/book/10.1007/978-0-387-84858-7). What is the expression for the effective degrees of freedom of the ridge regression fit?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfb96d39",
+   "metadata": {},
+   "source": [
+    "**e)** Why might we want to use Ridge regression instead of OLS?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38fedad",
+   "metadata": {},
+   "source": [
     "**f)** Why migth we want to use OLS instead of Ridge regression?"
    ]
   },
