Add text to Ex. 1

--- a/Week36/exercises_week36.ipynb
+++ b/Week36/exercises_week36.ipynb
@@ -90,6 +90,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75daf7aa",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u> The expression for the effective degrees of freedom of the ridge regression fit is: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfb96d39",
    "metadata": {},
    "source": [
@@ -98,10 +106,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91534be4",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d38fedad",
    "metadata": {},
    "source": [
     "**f)** Why migth we want to use OLS instead of Ridge regression?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5529dca",
+   "metadata": {},
+   "source": [
+    "<u>Answer:</u>"
    ]
   },
   {
@@ -206,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "8ed79466",
    "metadata": {},
    "outputs": [],
@@ -219,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "59d6f347",
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 100\n",
     "x = np.linspace(-3, 3, n)\n",
-    "y = np.exp(-x**2) + 1.5 * np.exp(-(x-2)**2) + np.random.normal(0, 0.1)"
+    "y = np.exp(-x**2) + 1.5 * np.exp(-(x-2)**2) + np.random.normal(0, 0.1, size=n)"
    ]
   },
   {
